<?xml version="1.0"?>
<package format="2">
  <name>stereo_ext_opt</name>
  <version>0.0.0</version>
  <description>The stereo_ext_opt package</description>

  <maintainer email="jypjypjypjyp@hotmail.com">jyp</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
  </export>
</package>
